# WaterFlow

./: .actlignore  .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.astera  README.md  diffuse.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  test_3aav.txt  test_pdb_list.txt
.github/workflows/: astera-docker.yml  build-push.yml  build.yml  lint.yml
SLAE/: __init__.py
SLAE/configs/: train_autoencoder.yaml
SLAE/configs/callbacks/: default.yaml
SLAE/configs/dataset/: pdb.yaml  pnunits.yaml
SLAE/configs/decoder/: allatom_decoder.yaml
SLAE/configs/encoder/: protein_encoder.yaml
SLAE/configs/env/: default.yaml
SLAE/configs/features/: fa.yaml
SLAE/configs/hydra/: default.yaml
SLAE/configs/logger/: wandb.yaml
SLAE/configs/scheduler/: linear_warmup_cosine_decay.yaml
SLAE/configs/task/: eng_struct_pretrain.yaml
SLAE/configs/trainer/: default.yaml
SLAE/datasets/: __init__.py  dataloader.py  datamodule.py  dataset.py  pnunits_datamodule.py
SLAE/features/: __init__.py  fa_representation.py  graph_featurizer.py  transform.py
SLAE/io/: atom_tensor.py  write_pdb.py
SLAE/loss/: __init__.py  losses.py
SLAE/model/: __init__.py  autoencoder.py  cs.py  decoder.py  encoder.py
SLAE/nn/: __init__.py  _allegro_module.py  _atomwise.py  _edgewise.py  base_model.py  bb_proj.py  cutoffs.py  graph_mixin.py  mlp_decoder.py  mlp_encoder.py  pos_enc.py  radial_basis.py  strided_irreps_ops.py  transformer_stack.py
SLAE/nn/embedding/: __init__.py  _edge.py  _node.py
SLAE/scripts/: chemical_shift_example.py  encode_decode_example.py  encode_example.py  eng_calc.py  generate_energy.py  train_example.py
SLAE/util/: __init__.py  _irrep_utils.py  align.py  avg_neighbor.py  constants.py  debug.py  embedding_extractor.py  fape_utils.py  memory_utils.py  rigid_transform.py  types.py
configs/: inference.yaml  train.yaml
configs/data/: default.yaml
configs/flow/: default.yaml
configs/logging/: default.yaml
configs/model/: esm.yaml  gvp.yaml  slae.yaml
docker/: entrypoint.sh
scripts/: generate_esm_embeddings.py  generate_slae_embeddings.py  generate_water_plots.py  inference.py  inspect_crystal_contacts.py  parse_edia_json.py  precompute_slae_embeddings.py  qc_symmetry_mates.py  qc_waters.py  run_edia_parallel.sh  train.py  visualize_graph_construction.py
scripts/wandb/: latest-run
scripts/wandb/run-20251218_105825-26ab4gpo/: run-26ab4gpo.wandb
scripts/wandb/run-20251218_105825-26ab4gpo/files/: config.yaml  requirements.txt  wandb-metadata.json
splits/: esm_test.txt  single_train.txt  small_train.txt  small_valid.txt  train_flow.txt  train_list_0.95.txt  train_single.txt  train_test.txt  valid_flow.txt  valid_list_0.05.txt  valid_test.txt  water_pdbs.txt
src/: __init__.py  constants.py  dataset.py  encoder.py  encoder_adapters.py  encoder_base.py  esm_encoder.py  flow.py  gvp.py  gvp_encoder.py  slae.py  slae_encoder.py  utils.py
tests/: conftest.py  test_dataset.py  test_embedding_generation.py  test_encoder.py  test_flow.py  test_forward.py  test_gvp.py  test_slae_integration.py  test_train_config.py  test_utils.py
tests/test_files/4h0b/: 4h0b_final.json
tests/test_files/6eey/: 6eey_final.cif  6eey_final.json
