[project]
name = "waterflow"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "torch==2.8.0",
  "torch-geometric",
  "torch-scatter",
  "torch-cluster",
  "pyg-lib",
  "e3nn",
  "esm",
  "biotite",
  "pymol-open-source",
  "scipy",
  "pandas",
  "matplotlib",
  "pillow",
  "loguru",
  "tqdm",
  "wandb",
]

[dependency-groups]
dev = ["pytest", "pytest-cov", "mypy", "ty", "prek", "ruff"]

# PyTorch CUDA 12.6 index (so `torch` comes from the right place)
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# PyG “find-links” page as a flat index (equivalent to pip -f ...)
[[tool.uv.index]]
name = "pyg-cu126"
url = "https://data.pyg.org/whl/torch-2.8.0+cu126.html"
format = "flat"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

torch-scatter = { index = "pyg-cu126" }
torch-cluster = { index = "pyg-cu126" }
pyg-lib = { index = "pyg-cu126" }
