[project]
name = "waterflow"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "torch==2.8.0",
  "torchvision",
  "torch-geometric",
  "torch-scatter",
  "torch-cluster",
  "pyg-lib",
  "biotite",
  "wandb",
  "networkx",
  "e3nn",
  "biopython",
  "matplotlib>=3.10.8",
  "pymol-open-source-whl>=3.1.0.4",
  "aiohappyeyeballs>=2.6.1",
  "aiohttp>=3.13.2",
  "aiosignal>=1.4.0",
  "annotated-types>=0.7.0",
  "antlr4-python3-runtime>=4.9.3",
  "anyio>=4.12.1",
  "asttokens>=3.0.1",
  "atomworks==2.2.0",
  "attrs>=25.4.0",
  "biopandas>=0.4.1",
  "biotraj>=1.2.2",
  "black>=25.12.0",
  "boto3>=1.42.22",
  "botocore>=1.42.22",
  "brotli>=1.2.0",
  "certifi>=2025.11.12",
  "charset-normalizer>=3.4.4",
  "click>=8.3.1",
  "cloudpathlib>=0.23.0",
  "comm>=0.2.3",
  "contourpy>=1.3.3",
  "coverage>=7.13.0",
  "cycler>=0.12.1",
  "cython>=3.2.4",
  "cytoolz>=0.12.3",
  "decorator>=5.2.1",
  "dna-features-viewer>=3.1.5",
  "einops>=0.8.1",
  "einx>=0.3.0",
  "esm>=3.2.3",
  "execnet>=2.1.2",
  "executing>=2.2.1",
  "filelock>=3.20.1",
  "flake8>=7.3.0",
  "fonttools>=4.61.1",
  "frozendict>=2.4.7",
  "frozenlist>=1.8.0",
  "fsspec>=2025.12.0",
  "gitdb>=4.0.12",
  "gitpython>=3.1.45",
  "h11>=0.16.0",
  "hf-xet>=1.2.0",
  "httpcore>=1.0.9",
  "httpx>=0.28.1",
  "huggingface-hub>=0.36.0",
  "hydra-core>=1.3.2",
  "hydride>=1.2.3",
  "hypothesis>=6.148.7",
  "idna>=3.11",
  "iniconfig>=2.3.0",
  "ipython>=9.9.0",
  "ipython-pygments-lexers>=1.1.1",
  "ipywidgets>=8.1.8",
  "isort>=7.0.0",
  "jedi>=0.19.2",
  "jinja2>=3.1.6",
  "jmespath>=1.0.1",
  "joblib>=1.5.3",
  "jupyterlab-widgets>=3.0.16",
  "kiwisolver>=1.4.9",
  "librt>=0.7.4",
  "lightning>=2.6.0",
  "lightning-utilities>=0.15.2",
  "loguru>=0.7.3",
  "looseversion>=1.3.0",
  "markdown-it-py>=4.0.0",
  "markupsafe>=3.0.3",
  "matplotlib-inline>=0.2.1",
  "mccabe>=0.7.0",
  "mdurl>=0.1.2",
  "mmtf-python>=1.1.3",
  "mpmath>=1.3.0",
  "msgpack>=1.1.2",
  "msgpack-numpy>=0.4.8",
  "multidict>=6.7.0",
  "mypy>=1.19.1",
  "mypy-extensions>=1.1.0",
  "numpy>=1.26.4",
  "nvidia-cublas-cu12>=12.6.4.1",
  "nvidia-cuda-cupti-cu12>=12.6.80",
  "nvidia-cuda-nvrtc-cu12>=12.6.77",
  "nvidia-cuda-runtime-cu12>=12.6.77",
  "nvidia-cudnn-cu12>=9.10.2.21",
  "nvidia-cufft-cu12>=11.3.0.4",
  "nvidia-cufile-cu12>=1.11.1.6",
  "nvidia-curand-cu12>=10.3.7.77",
  "nvidia-cusolver-cu12>=11.7.1.2",
  "nvidia-cusparse-cu12>=12.5.4.2",
  "nvidia-cusparselt-cu12>=0.7.1",
  "nvidia-nccl-cu12>=2.27.3",
  "nvidia-nvjitlink-cu12>=12.6.85",
  "nvidia-nvshmem-cu12>=3.5.19",
  "nvidia-nvtx-cu12>=12.6.77",
  "omegaconf>=2.3.0",
  "opt-einsum>=3.4.0",
  "opt-einsum-fx>=0.1.4",
  "packaging>=25.0",
  "pandas>=2.3.3",
  "parso>=0.8.5",
  "pathspec>=0.12.1",
  "pexpect>=4.9.0",
  "pillow>=12.0.0",
  "platformdirs>=4.5.1",
  "pluggy>=1.6.0",
  "prompt-toolkit>=3.0.52",
  "propcache>=0.4.1",
  "protobuf>=6.33.2",
  "psutil>=7.1.3",
  "ptyprocess>=0.7.0",
  "pure-eval>=0.2.3",
  "py3dmol>=2.5.3",
  "pyarrow>=17.0.0",
  "pycodestyle>=2.14.0",
  "pydantic>=2.12.5",
  "pydantic-core>=2.41.5",
  "pydssp>=0.9.1",
  "pyflakes>=3.4.0",
  "pygments>=2.19.2",
  "pygtrie>=2.5.0",
  "pymol-remote>=1.1.0",
  "pyparsing>=3.2.5",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest-timeout>=2.4.0",
  "pytest-xdist>=3.8.0",
  "python-dateutil>=2.9.0.post0",
  "pytokens>=0.3.0",
  "pytorch-lightning>=2.6.0",
  "pytz>=2025.2",
  "pyyaml>=6.0.3",
  "rdkit>=2025.3.6",
  "regex>=2025.11.3",
  "requests>=2.32.5",
  "rich>=14.2.0",
  "s3transfer>=0.16.0",
  "safetensors>=0.7.0",
  "scikit-learn>=1.8.0",
  "scipy>=1.16.3",
  "sentry-sdk>=2.48.0",
  "setuptools>=80.9.0",
  "shellingham>=1.5.4",
  "six>=1.17.0",
  "smmap>=5.0.2",
  "sortedcontainers>=2.4.0",
  "stack-data>=0.6.3",
  "sympy>=1.14.0",
  "tenacity>=9.1.2",
  "threadpoolctl>=3.6.0",
  "tokenizers>=0.21.4",
  "toolz>=1.1.0",
  "torch-runstats>=0.2.0",
  "torchmetrics>=1.8.2",
  "torchtext>=0.18.0",
  "tqdm>=4.67.1",
  "traitlets>=5.14.3",
  "transformers>=4.48.1",
  "triton>=3.4.0",
  "typer>=0.21.1",
  "typing-extensions>=4.15.0",
  "typing-inspection>=0.4.2",
  "tzdata>=2025.3",
  "urllib3>=2.6.2",
  "wcwidth>=0.2.14",
  "widgetsnbextension>=4.0.15",
  "xxhash>=3.6.0",
  "yarl>=1.22.0",
  "zstandard>=0.25.0",
  "zstd>=1.5.7.2",
  "jaxtyping>=0.3.9",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "hypothesis>=6.70.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
]

# PyTorch CUDA 12.6 index (so `torch`/`torchvision` come from the right place)
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# PyG “find-links” page as a flat index (equivalent to pip -f ...)
[[tool.uv.index]]
name = "pyg-cu126"
url = "https://data.pyg.org/whl/torch-2.8.0+cu126.html"
format = "flat"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

torch-scatter = { index = "pyg-cu126" }
torch-cluster = { index = "pyg-cu126" }
pyg-lib = { index = "pyg-cu126" }

[tool.mypy]
disallow_untyped_defs = false
ignore_missing_imports = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.ty.rules]
unresolved-import = "ignore"

[tool.ruff.lint]
fixable = ["I001", "F401", "UP"]
ignore = ["E402", "E501", "E721", "E731", "E741", "F722", "F821", "UP015", "UP037"]
select = ["E", "F", "I001", "UP"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"collections" = "co"
"functools" = "ft"
"itertools" = "it"

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

